Remove sudo and add 0.0.0.0 interface for .env, also restart always for the server service

--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,5 @@
 EMAIL=admin@localhost
-SERVER_BASE_URL=https://localhost
-HONEYMAP_URL=
-REDIS_URL=redis://redis:6379
+SERVER_BASE_URL=https://0.0.0.0/chn
 MAIL_SERVER=127.0.0.1
 MAIL_PORT=25
 MAIL_TLS=y
