--- a/templates/docker-compose.yml.template
+++ b/templates/docker-compose.yml.template
@@ -1,3 +1,5 @@
+---
+version: '3'
 services:
   mongodb:
     image: mongo:3.4.24-xenial
@@ -12,29 +14,32 @@ services:
     restart: always
 
   hpfeeds3:
-    image: stingar/hpfeeds-logger:1.9.1
-    volumes:
-      - ./storage/hpfeeds-logs:/var/log/hpfeeds-logger:z
-    env_file:
-      - config/sysconfig/hpfeeds-logger.env
+    image: stingar/hpfeeds3:1.9.1
+    links:
+      - mongodb:mongodb
+    ports:
+      - "10000:10000"
     restart: always
 
   mnemosyne:
     image: stingar/mnemosyne:1.9.1
     env_file:
       - ./config/sysconfig/mnemosyne.env
+    links:
+      - mongodb:mongodb
+      - hpfeeds3:hpfeeds3
     restart: always
 
   chnserver:
-    build:
-      context: .
-    env_file:
-      - ./config/sysconfig/chnserver.env
+    image: stingar/chn-server:1.9.1
     volumes:
       - ./storage/chnserver/sqlite:/opt/sqlite:z
       - ./certs:/etc/letsencrypt:z
+    env_file:
+      - ./config/sysconfig/chnserver.env
+    links:
+      - mongodb:mongodb
     ports:
       - "80:80"
       - "443:443"
-    restart:
-      always
+    restart: always
