Add the modified cowrie config

--- a/images/cowrie/Dockerfile
+++ b/images/cowrie/Dockerfile
@@ -4,6 +4,7 @@ FROM stingar/cowrie:${COWRIE_VERSION}
 
 COPY chn-register.py /code/
 COPY entrypoint.sh /code/
+COPY config/cowrie.reference.cfg /code/
 
 USER root
 
