--- a/images/cowrie/config/cowrie.cfg
+++ b/images/cowrie/config/cowrie.cfg
@@ -219,6 +219,8 @@ ssh_version_string = SSH-2.0-OpenSSH_6.0p1 Debian-4+deb7u2
 
 # Public and private SSH key files. If these don't exist, they are created
 # automatically.
+# This is not recommended, but it is easier for the botnet setup we have, we don't
+# have to generate Ed25519 keys
 rsa_public_key = data/ssh_host_rsa_key.pub
 rsa_private_key = data/ssh_host_rsa_key
 dsa_public_key = data/ssh_host_dsa_key.pub
