--- a/images/cowrie/config/cowrie.reference.cfg
+++ b/images/cowrie/config/cowrie.reference.cfg
@@ -4,6 +4,8 @@ hostname = server
 log_path = /data/logs
 state_path = /data/state
 reported_ssh_port = 22
+# Enable outbound traffic
+out_addr = 0.0.0.0
 
 [ssh]
 enabled = true
