Remove redundant statements, fix Dockerfile

--- a/images/cowrie/Dockerfile
+++ b/images/cowrie/Dockerfile
@@ -1,23 +1,21 @@
 FROM python:3.7
 
 LABEL maintainer="Team Stingar <team.stingar@duke.edu>"
-LABEL name="cowrie"
-LABEL version="1.9"
-LABEL release="1"
 LABEL summary="Cowrie HoneyPot container"
 LABEL description="Cowrie is a medium interaction SSH and Telnet honeypot designed to log brute force attacks and the shell interaction performed by the attacker."
 LABEL authoritative-source-url="https://github.com/CommunityHoneyNetwork/communityhoneynetwork"
-LABEL changelog-url="https://github.com/CommunityHoneyNetwork/communityhoneynetwork/commits/master"
-
-COPY chn-register.py /code/
-COPY entrypoint.sh /code/
-COPY config/cowrie.reference.cfg /code/
 
 ENV DOCKER="yes"
 ENV COWRIE_VERS="v2.1.0"
 
 RUN mkdir -p /code /data /etc/cowrie
-ADD requirements.txt /code/
+
+COPY chn-register.py /code/
+COPY entrypoint.sh /code/
+COPY config/cowrie.reference.cfg /code/
+COPY requirements.txt /code/
+COPY config/cowrie.nopubkey.cfg /code/cowrie.reference.cfg
+COPY hpfeeds3.py /opt/cowrie/src/cowrie/output/
 
 # Add the cowrie user
 RUN useradd -m -s /bin/bash cowrie
@@ -38,10 +36,6 @@ RUN apt-get update \
     && apt-get remove -y git gcc python3-dev libssl-dev \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
-
-ADD hpfeeds3.py /opt/cowrie/src/cowrie/output/
-ADD config/cowrie.reference.cfg /code/cowrie.reference.cfg
-ADD entrypoint.sh /code/
 
 RUN chmod +x /code/entrypoint.sh
 
