--- a/ddos/reverse-proxy/docker-compose.yaml
+++ b/ddos/reverse-proxy/docker-compose.yaml
@@ -8,12 +8,12 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./logs:/var/log/nginx
     networks:
-      - chn-network
+   #   - chn-network
       - victim-network
     restart: always
 
 networks:
-  chn-network:
-    external: true
+ # chn-network:
+ #  external: true
   victim-network:
     external: true  
