--- a/ddos/reverse-proxy/nginx.conf
+++ b/ddos/reverse-proxy/nginx.conf
@@ -1,30 +1,65 @@
 # Minimal configuration as specified by https://docs.nginx.com/nginx/admin-guide/web-server/reverse-proxy/
-events {}
-
-http {
-    server {
-        # Omitting the port, you can still access by specifying the port
-        listen 80;
-        location / {
-            # Forward to the service 
-            proxy_pass http://victim;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Accept-Encoding "";
-            # Forward the original client IP
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            # If buffering is disabled, the response is sent to the client synchronously
-            # while it is receiving it from the proxied server. 
-            # This behavior may be desirable for fast interactive clients that need to start
-            # receiving the response as soon as possible.
-            proxy_buffering off;
-            # Logs
-            access_log /var/log/nginx/access.log;
-            error_log /var/log/nginx/error.log debug;
-        }
-    }
+events {
+    worker_connections 1024; 
 }
+
+#http {
+#    server {
+#        # Omitting the port, you can still access by specifying the port
+#        listen 80;
+#        location / {
+#            # Forward to the service 
+#            proxy_pass http://victim;
+#            proxy_set_header Host $host;
+#            proxy_set_header X-Real-IP $remote_addr;
+#            proxy_set_header Accept-Encoding "";
+#            # Forward the original client IP
+#            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#            proxy_set_header X-Forwarded-Proto $scheme;
+#            # If buffering is disabled, the response is sent to the client synchronously
+#            # while it is receiving it from the proxied server. 
+#            # This behavior may be desirable for fast interactive clients that need to start
+#            # receiving the response as soon as possible.
+#            proxy_buffering off;
+#            # Logs
+#            access_log /var/log/nginx/access.log;
+#            error_log /var/log/nginx/error.log debug;
+#        }
+#    }
+#}
 # If multi_accept is disabled, a worker process will accept one new connection at a time. 
 # Otherwise, a worker process will accept all new connections at a time. 
 # multi_accept on;
+
+http {
+    server {
+        listen 80;
+
+        # Forward to the dynamic victim
+        location /dynamic {
+            proxy_pass http://dynamic-victim:5000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+	    # Logs
+            access_log /var/log/nginx/dynamic_access.log;
+            error_log /var/log/nginx/dynamic_error.log debug;
+        }
+
+        # Forward to the static victim
+        location /static {
+            proxy_pass http://static-victim:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            # Logs
+	    access_log /var/log/nginx/static_access.log;
+	    error_log /var/log/nginx/static_error.log debug;
+        }
+    }
+}
+
