😩 Commiting straight to master

--- a/images/cowrie/config/cowrie.nopubkey.cfg
+++ b/images/cowrie/config/cowrie.nopubkey.cfg
@@ -6,10 +6,18 @@ state_path = /data/state
 reported_ssh_port = 22
 # Enable outbound traffic
 out_addr = 0.0.0.0
+sftp_enabled = true
 
 [ssh]
 enabled = true
-listen_endpoints = tcp:2222:interface=0.0.0.0
+# Endpoint to listen on for incoming SSH connections.
+# See https://twistedmatrix.com/documents/current/core/howto/endpoints.html#servers
+# (default: listen_endpoints = tcp:2222:interface=0.0.0.0)
+# (use systemd: endpoint for systemd activation)
+# listen_endpoints = systemd:domain=INET:index=0
+# For both IPv4 and IPv6: listen_endpoints = tcp6:2222:interface=\:\:
+# Listening on multiple endpoints is supported with a single space seperator
+listen_endpoints = tcp6:2222:interface=\:\:
 reported_port = 22
 # Default options from  https://github.com/cowrie/cowrie/blob/main/etc/cowrie.cfg.dist
 rsa_public_key = /data/ssh_host_rsa_key.pub
@@ -26,7 +34,7 @@ public_key_auth = ssh-rsa,ecdsa-sha2-nistp256,ssh-ed25519
 
 [telnet]
 enabled = true
-listen_endpoints = tcp:2223:interface=0.0.0.0
+listen_endpoints = tcp6:2223:interface=\:\:
 reported_port = 23
 
 [output_hpfeeds3]
