--- a/images/cowrie/config/cowrie.reference.cfg
+++ b/images/cowrie/config/cowrie.reference.cfg
@@ -6,6 +6,7 @@ state_path = /data/state
 reported_ssh_port = 22
 # Enable outbound traffic
 out_addr = 0.0.0.0
+sftp_enabled = true
 
 [ssh]
 enabled = true
