--- a/images/cowrie/config/cowrie.custom.cfg
+++ b/images/cowrie/config/cowrie.custom.cfg
@@ -1,4 +1,5 @@
 # Source: https://gitlab.oit.duke.edu/stingar/cowrie/-/tree/master?ref_type=heads
+# Custom configuration, to enable outbound traffic, edit interfaces that accept connections, etc
 [honeypot]
 hostname = server
 log_path = /data/logs
@@ -6,6 +7,7 @@ state_path = /data/state
 reported_ssh_port = 22
 # Enable outbound traffic
 out_addr = 0.0.0.0
+# Enable sftp for file transfer
 sftp_enabled = true
 
 [ssh]
